made the player animation idle animation!

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 <head>
+    <meta charset="utf-8" />
+    <title>Canvas</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src='sprite.js'></script>
+    <script type="text/javascript" src='resource.js'></script>
+    <script type="text/javascript" src='basic.js'></script>
 </head>
-<canvas id="canvas"></canvas>
-<script src='basic.js'></script>
+
 <body>
+<div id="stage">
+    <canvas id="bgCanvas" height="600" width="800"></canvas>
+    <canvas id="entityCanvas" height="600" width="800"></canvas>
+</div>
 </body>
 </html>
